# akili

./: README.md  pyproject.toml
app/: main.py
app/a_mlp/: README.md  __init__.py
app/a_mlp/0_notes/0 - sources/: kaggle.md  medium-chatgpt.md  medium.md
app/a_mlp/0_notes/1 - sources/: backprop yt 1 notebook lm mindmap.md
app/a_mlp/layer/: __init__.py
app/a_mlp/optims/: __init__.py  adam.py  adamw.py  base.py  rms.py  sgd.py
app/b_rnn/: __init__.py
app/b_rnn/layer/: __init__.py
app/z_test/: __init__.py  mlp.py  rnn.py
models/mnist/: model_best.pkl  model_best_epoch_0_20250810_132712.pkl  model_best_epoch_0_20250810_132712_info.json  model_best_epoch_1_20250810_132719.pkl  model_best_epoch_1_20250810_132719_info.json  model_best_epoch_2_20250810_132726.pkl  model_best_epoch_2_20250810_132726_info.json  model_best_epoch_5_20250810_132754.pkl  model_best_epoch_5_20250810_132754_info.json  model_best_info.json
