[tool.poetry]
name = "akili"
version = "0.1.0"
description = ""
authors = ["kithinjibrian <kithinjibrian369@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
matplotlib = "^3.10.5"
scikit-learn = "^1.7.1"
tensorflow = "^2.19.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-app = "app.main:main"